# data-science-exercise

./: .gitignore  README.md  pyproject.toml
chapter-01/: 01.ipynb
chapter-02/: 02.html  02.ipynb
classification/: classification.ipynb
regression/: 03.html  03.ipynb
unsupervised-learning/: 02.html  02.ipynb
