[tool.poetry]
name = "data-science-exercise"
version = "0.1.0"
description = ""
authors = ["Yusuke Shimizu <44394399+rabhareit@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.6.7"
scikit-learn = "^0.23.2"
pandas = "^1.1.1"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
